--- a/pocetna/styles.css
+++ b/pocetna/styles.css
@@ -155,7 +155,7 @@ h4 {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("pozadina1.webp");
+  background-image: url("../assets/pozadina1.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
