--- a/prijaviSe/styles.css
+++ b/prijaviSe/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url("pozadina1.avif");
+  background-image: url("../assets/pozadina1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
