--- a/pocetna/styles.css
+++ b/pocetna/styles.css
@@ -216,3 +216,36 @@ header {
     font-size: 0.9rem;
   }
 }
+.card table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 15px;
+}
+
+.card table th,
+.card table td {
+  padding: 10px;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+  font-size: 0.95rem;
+}
+
+.card table tbody tr:hover {
+  background-color: #f0e6da;
+  transition: background-color 0.3s ease;
+}
+
+.card .more {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.card .more a {
+  color: orange;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.card .more a:hover {
+  color: rgb(188, 89, 32);
+}
