--- a/pocetna/styles.css
+++ b/pocetna/styles.css
@@ -239,15 +239,32 @@ table th {
   font-family: inherit;
   line-height: normal;
   min-height: 40px;
+  position: relative;
+  cursor: pointer;
 }
 
+.form-group input[type="date"]::-webkit-inner-spin-button,
 .form-group input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
-  opacity: 0.6;
+  opacity: 1;
+  position: absolute;
+  right: 10px;
+  width: 20px;
+  height: 20px;
 }
 
-.form-group input[type="date"]::-webkit-calendar-picker-indicator:hover {
-  opacity: 1;
+.form-group input[type="date"]::-webkit-datetime-edit-fields-wrapper {
+  padding: 0;
+}
+
+.form-group input[type="date"]::-webkit-datetime-edit-text {
+  padding: 0 0.3em;
+}
+
+.form-group input[type="date"]::-webkit-datetime-edit-month-field,
+.form-group input[type="date"]::-webkit-datetime-edit-day-field,
+.form-group input[type="date"]::-webkit-datetime-edit-year-field {
+  padding: 0 0.2em;
 }
 
 .form-group input:focus {
@@ -386,7 +403,16 @@ table th {
   }
 
   .form-group input[type="date"] {
-    min-height: 42px;
+    min-height: 44px;
+    padding: 11px 10px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+  .form-group input[type="date"]::-webkit-calendar-picker-indicator {
+    width: 24px;
+    height: 24px;
+    opacity: 1;
   }
 
   .linijaa {
@@ -484,9 +510,15 @@ table th {
   }
 
   .form-group input[type="date"] {
-    padding: 10px;
-    min-height: 44px;
+    padding: 11px 10px;
+    min-height: 46px;
     font-size: 16px;
+    cursor: pointer;
+  }
+
+  .form-group input[type="date"]::-webkit-calendar-picker-indicator {
+    width: 26px;
+    height: 26px;
   }
 
   .form-group input[type="number"] {
@@ -586,9 +618,15 @@ table th {
   }
 
   .form-group input[type="date"] {
-    padding: 9px;
-    min-height: 42px;
+    padding: 11px 10px;
+    min-height: 48px;
     font-size: 16px;
+    cursor: pointer;
+  }
+
+  .form-group input[type="date"]::-webkit-calendar-picker-indicator {
+    width: 28px;
+    height: 28px;
   }
 
   .form-group input[type="number"],
